<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xmlns="http://maven.apache.org/POM/4.0.0"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <artifactId>movieportal</artifactId>
    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <artifactId>lombok</artifactId>
                            <groupId>org.projectlombok</groupId>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
                <groupId>org.apache.maven.plugins</groupId>
            </plugin>
            <plugin>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <artifactId>lombok</artifactId>
                            <groupId>org.projectlombok</groupId>
                        </exclude>
                    </excludes>
                </configuration>
                <groupId>org.springframework.boot</groupId>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <artifactId>spring-boot-starter-web</artifactId>
            <groupId>org.springframework.boot</groupId>
        </dependency>

        <dependency>
            <artifactId>lombok</artifactId>
            <groupId>org.projectlombok</groupId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <artifactId>spring-boot-starter-test</artifactId>
            <groupId>org.springframework.boot</groupId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <artifactId>spring-boot-starter-actuator</artifactId>
            <groupId>org.springframework.boot</groupId>
        </dependency>
        <dependency>
            <artifactId>spring-boot-starter-thymeleaf</artifactId>
            <groupId>org.springframework.boot</groupId>
        </dependency>
        <dependency>
            <artifactId>spring-boot-starter-validation</artifactId>
            <groupId>org.springframework.boot</groupId>
        </dependency>
        <dependency>
            <artifactId>spring-boot-starter-validation</artifactId>
            <groupId>org.springframework.boot</groupId>
        </dependency>
        <dependency>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
            <groupId>org.springframework.boot</groupId>
        </dependency>
        <dependency>
            <artifactId>mysql-connector-j</artifactId>
            <groupId>com.mysql</groupId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <groupId>org.springdoc</groupId>
            <version>2.8.5</version>
        </dependency>
        <dependency>
            <artifactId>spring-boot-starter-security</artifactId>
            <groupId>org.springframework.boot</groupId>
        </dependency>
        <dependency>
            <artifactId>spring-security-test</artifactId>
            <groupId>org.springframework.security</groupId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <artifactId>thymeleaf-extras-springsecurity6</artifactId>
            <groupId>org.thymeleaf.extras</groupId>
        </dependency>
        <dependency>
            <artifactId>modelmapper</artifactId>
            <groupId>org.modelmapper</groupId>
            <version>3.2.0</version>
        </dependency>
        <dependency>
            <artifactId>jjwt</artifactId>
            <groupId>io.jsonwebtoken</groupId>
            <version>0.12.5</version>
        </dependency>
    </dependencies>
    <description>movieportal</description>
    <developers>
        <developer/>
    </developers>
    <groupId>com.furkanbilgin.finalproject.movieportal</groupId>
    <licenses>
        <license/>
    </licenses>
    <modelVersion>4.0.0</modelVersion>
    <name>movieportal</name>
    <parent>
        <artifactId>spring-boot-starter-parent</artifactId>
        <groupId>org.springframework.boot</groupId>
        <relativePath/>
        <version>3.5.4</version> <!-- lookup parent from repository -->
    </parent>
    <properties>
        <java.version>21</java.version>
        <jwt.version>0.12.3</jwt.version>
    </properties>
    <scm>
        <connection/>
        <developerConnection/>
        <tag/>
        <url/>
    </scm>
    <url/>

    <version>0.0.1-SNAPSHOT</version>

</project>
